==> LogicElements/fw-matterbridge/STM32/Core/src/app_entry.cpp <==
#include "app_entry.h"
#include "app_ble.h"
#include "app_common.h"
#include "app_conf.h"
#include "app_debug.h"
#include "app_thread.h"
#include "cmsis_os.h"
#include "dbg_trace.h"
#include "hw_conf.h"
#include "main.h"
#include "shci.h"
#include "shci_tl.h"
#include "stm32_lpm.h"
#include "stm_logging.h"
#include "AppTask.h"
#include "STM32FreeRtosHooks.h"
#include "flash_wb.h"
#include "LED.h"
#include "LED_Animation.h"
#include "otp.h"
#include "stm_ext_flash.h"
#define POOL_SIZE (CFG_TLBLE_EVT_QUEUE_LENGTH * 4 * DIVC((sizeof(TL_PacketHeader_t) + TL_BLE_EVENT_FRAME_SIZE), 4))

static void Init_Exti(void)
{
	/* Enable IPCC(36), HSEM(38) wakeup interrupts on CPU1 */
	// LL_EXTI_EnableIT_32_63(LL_EXTI_LINE_36 | LL_EXTI_LINE_38);

	/* Disable all wakeup interrupt on CPU1  except LPUART(25), IPCC(36), HSEM(38) */
	LL_EXTI_DisableIT_0_31((~0) & (~(LL_EXTI_LINE_25)));
	LL_EXTI_DisableIT_32_63((~0) & (~(LL_EXTI_LINE_36 | LL_EXTI_LINE_38)));
	return;
}

static void SystemPower_Config(void)
{
	// Before going to stop or standby modes, do the settings so that system clock and IP80215.4 clock
	// start on HSI automatically
	LL_RCC_HSI_EnableAutoFromStop();

	/**
	 * Select HSI as system clock source after Wake Up from Stop mode
	 */
	LL_RCC_SetClkAfterWakeFromStop(LL_RCC_STOP_WAKEUPCLOCK_HSI);

	/* Initialize low power manager */
	UTIL_LPM_Init();

	/* Disable low power mode until INIT is complete */
	UTIL_LPM_SetOffMode(1 << CFG_LPM_APP, UTIL_LPM_DISABLE);
	UTIL_LPM_SetStopMode(1 << CFG_LPM_APP, UTIL_LPM_DISABLE);

	/* Enable RAM1 (because OT instance.o is located here for Concurrent Mode */
	LL_C2_AHB1_GRP1_EnableClock(LL_C2_AHB1_GRP1_PERIPH_SRAM1);
	LL_C2_AHB1_GRP1_EnableClockSleep(LL_C2_AHB1_GRP1_PERIPH_SRAM1);

	return;
}

static void appe_Tl_Init(void)
{
	/**< Reference table initialization */
	TL_Init();

	MtxShciId = osMutexNew(NULL);
	SemShciId = osSemaphoreNew(1, 0, NULL); /*< Create the semaphore and make it busy at initialization */

	/** FreeRTOS system task creation */
	ShciUserEvtProcessId = osThreadNew(ShciUserEvtProcess, NULL, &ShciUserEvtProcess_attr);

	return;
}

static void APPE_SysEvtError(SCHI_SystemErrCode_t ErrorCode)
{
	switch (ErrorCode)
	{
		case ERR_THREAD_LLD_FATAL_ERROR:
			APP_DBG("** ERR_THREAD : LLD_FATAL_ERROR \n");
			break;

		case ERR_THREAD_UNKNOWN_CMD:
			APP_DBG("** ERR_THREAD : UNKNOWN_CMD \n");
			break;

		default:
			APP_DBG("** ERR_THREAD : ErroCode=%d \n", ErrorCode);
			break;
	}
	return;
}

static void APPE_SysEvtReadyProcessing(void)
{
	/* Traces channel initialization */
	APPD_EnableCPU2();

	/* Configuration to CPU2 */
	SHCI_C2_CONFIG_Cmd_Param_t config_param = {0};
	uint32_t Ot_NVMAddr = 0;

	/* In the Context of Dynamic Concurrent mode, the Init and start of each stack must be split and executed
	 * in the following order :
	 * APP_BLE_Init_Dyn_1()    : BLE Stack Init until it's ready to start ADV
	 * APP_THREAD_Init_Dyn_1() : Thread Stack Init until it's ready to be configured (default channel, PID, etc...)
	 * APP_THREAD_Init_Dyn_2() : Thread Stack configuration (default channel, PID, etc...) to be able to start scanning
	 *                           or joining a Thread Network
	 */

	APP_THREAD_CheckWirelessFirmwareInfo();

	/* Set the address that will be used by OT stack for NVM data management */
	if (NM_GetOtNVMAddr(&Ot_NVMAddr) == NVM_OK)
	{
		config_param.ThreadNvmRamAddress = Ot_NVMAddr;
		(void)SHCI_C2_Config(&config_param);
	}

	APP_DBG("1- Initialisation of BLE Stack...");
	APP_BLE_Init_Dyn_1();

	APP_DBG("2- Initialisation of OpenThread Stack...");
	APP_THREAD_Init_Dyn_1();
	APP_THREAD_Init_Dyn_2();

	APP_DBG("* GetAppTask().InitMatter();*");
	GetAppTask().InitMatter();

	APP_DBG("* GetAppTask().StartAppTask();*");
	GetAppTask().StartAppTask();

	APP_DBG("Initialisation finished");

#if (CFG_LPM_SUPPORTED == 1)
	/* Thread stack is initialized, low power mode can be enabled */
	UTIL_LPM_SetOffMode(1U << CFG_LPM_APP, UTIL_LPM_ENABLE);
	UTIL_LPM_SetStopMode(1U << CFG_LPM_APP, UTIL_LPM_ENABLE);
#endif

	return;
}

void shci_notify_asynch_evt(void* pdata)
{
	UNUSED(pdata);

	osThreadFlagsSet(ShciUserEvtProcessId, 1);
	return;
}

void shci_cmd_resp_release(uint32_t flag)
{
	UNUSED(flag);
	osSemaphoreRelease(SemShciId);
	return;
}

void shci_cmd_resp_wait(uint32_t timeout)
{
	osSemaphoreAcquire(SemShciId, pdMS_TO_TICKS(timeout));
	return;
}
